# lsp_utils

./: .buildinfo  .gitattributes  .gitignore  README.md  api_handler.html  ci.sh  client_handlers.html  index.html  lsp_utils.sublime-commands  lsp_utils.sublime-settings  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  renovate.json  search.html  searchindex.js  server_resource_handlers.html  sublime-package.json  tox.ini  utilities.html
.github/workflows/: deploy-docs.yml  main.yml  on-change.yml  on-dispatch.yml  on-pull-request.yml  on-push-main.yml  on-push-master.yml  on-push-pr.yml  on-push-tag.yml  release-on-tag.yml  shared.yml  test-community-packages.yaml  test-on-lsp-change.yml  test.yml
_sources/: api_handler.rst.txt  client_handlers.rst.txt
docs/: Makefile
docs/source/: api.rst  api_handler.rst  client_handlers.rst  conf.py  index.rst  server_resource_handlers.rst  utilities.rst
lsp_utils/: __init__.py  api_wrapper_interface.py  constants.py  generic_client_handler.py  helpers.py  node_runtime.py  npm_client_handler.py  pip_client_handler.py  pip_venv_manager.py  server_npm_resource.py  server_pip_resource.py  server_resource_interface.py  uv_runner.py  uv_venv_manager.py
lsp_utils/_client_handler/: __init__.py  abstract_plugin.py  api_decorator.py  interface.py
lsp_utils/_node/: node_constants.py  node_installer.py  node_manager.py  node_runner.py
lsp_utils/_util/: __init__.py  download_file.py  host_arch.py  logging.py
scripts/: 3.3-compat-fix.patch  update-semantic-version.py  update-semantic-version.sh
st3/lsp_utils/: __init__.py  activity_indicator.py  api_wrapper.py  api_wrapper_interface.py  generic_client_handler.py  helpers.py  node_distribution.py  node_runtime.py  npm_client_handler.py  npm_client_handler_v2.py  pip_client_handler.py  server_npm_resource.py  server_pip_resource.py  server_resource_interface.py  server_vscode_marketplace_resource.py  v0.py  v1.py  vscode_marketplace_client_handler.py  vscode_marketplace_client_handler_v2.py
st3/lsp_utils/_client_handler/: __init__.py  abstract_plugin.py  decorator.py  interface.py  language_handler.py
st3/lsp_utils/_util/: weak_method.py
st4_py38/lsp_utils/: __init__.py  api_wrapper_interface.py  generic_client_handler.py  helpers.py  node_runtime.py  npm_client_handler.py  pip_client_handler.py  pip_venv_manager.py  server_npm_resource.py  server_pip_resource.py  server_resource_interface.py  uv_runner.py  uv_venv_manager.py
st4_py38/lsp_utils/_client_handler/: __init__.py  abstract_plugin.py  api_decorator.py  interface.py
st4_py38/lsp_utils/_util/: __init__.py  download_file.py  weak_method.py
tests/: sample.py  setup.py  test_node.py  test_simple.py  test_smoketest.py  test_uv.py
tests/assets/: sample.py
