[project]
name = "lsp-utils"
dynamic = ["version"]
description = "Library with LSP-related utilities for Sublime Text "
readme = "README.md"
license-files = ["LICENSE"]
authors = [{name = "rchl"}]
classifiers = [
	"Intended Audience :: Developers",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling>=1.20", "hatch-vcs>=0.4"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
	"/.*",
	"*.lock",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "lsp_utils/_version.py"
tag-pattern = "v{version}"

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
disallow_untyped_defs = true
# Don't report errors in external packages.
follow_imports = "silent"
mypy_path = ["..", "../LSP/stubs", "../sublime_lib"]
namespace_packages = true
strict_optional = true

[[tool.mypy.overrides]]
module = 'tests.*'
check_untyped_defs = true
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = 'lsp_utils.third_party.semantic_version.*'
ignore_errors = true
ignore_missing_imports = true

[tool.pyright]
pythonVersion = "3.8"
reportAny = "none"
reportExplicitAny = "none"
reportMissingModuleSource = "none"
reportUnusedCallResult = "none"
ignore = ["**/third_party/"]
extraPaths = ["..", "../LSP/stubs", "../sublime_lib"]

[tool.ruff]
line-length = 120
target-version = "py38"
exclude = [
	"docs",
	"lsp_utils/third_party",
	"tests",
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
# Respect magic trailing commas.
skip-magic-trailing-comma = false
# Automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.isort]
case-sensitive = false
force-single-line = true
from-first = true
no-sections = true
order-by-type = false
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint]
# Enable preview rules.
preview = true
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
select = ["ALL"]
ignore = [
	"ANN401",  # https://docs.astral.sh/ruff/rules/any-type/
	"BLE001",  # https://docs.astral.sh/ruff/rules/blind-except/
	"CPY001",  # https://docs.astral.sh/ruff/rules/missing-copyright-notice/
	"C901",  # https://docs.astral.sh/ruff/rules/complex-structure/
	"D100",  # https://docs.astral.sh/ruff/rules/undocumented-public-module/
	"D101",  # https://docs.astral.sh/ruff/rules/undocumented-public-class/
	"D102",  # https://docs.astral.sh/ruff/rules/undocumented-public-method/
	"D103",  # https://docs.astral.sh/ruff/rules/undocumented-public-function/
	"D104",  # https://docs.astral.sh/ruff/rules/undocumented-public-package/
	"D107",  # https://docs.astral.sh/ruff/rules/undocumented-public-init/
	"D203",
	"D212",
	"DOC201",  # https://docs.astral.sh/ruff/rules/docstring-missing-returns/
	"DOC501",  # https://docs.astral.sh/ruff/rules/docstring-missing-exception/
	"PLC0415",  # https://docs.astral.sh/ruff/rules/import-outside-top-level/
	"PLR0912",  # https://docs.astral.sh/ruff/rules/too-many-branches/
	"PLR0913",  # https://docs.astral.sh/ruff/rules/too-many-arguments/
	"PLR0915",  # https://docs.astral.sh/ruff/rules/too-many-statements/
	"PLR1702",  # https://docs.astral.sh/ruff/rules/too-many-nested-blocks/
	"PLR6301",  # https://docs.astral.sh/ruff/rules/no-self-use/
	"Q000",  # https://docs.astral.sh/ruff/rules/bad-quotes-inline-string/#bad-quotes-inline-string-q000
	"TID252",  # https://docs.astral.sh/ruff/rules/relative-imports/
	"TRY002",  # https://docs.astral.sh/ruff/rules/raise-vanilla-class/
]
